--- a/client/public/locales/zh/common.json
+++ b/client/public/locales/zh/common.json
@@ -1,197 +1,197 @@
 {
-  "App": "应用",
-  "Cancel": "取消",
-  "Confirm": "确认",
-  "Running": "运行中",
-  "Select value is empty": "选择的内容为空",
-  "UnKnow": "未知",
-  "Warning": "提示",
+  "App": "App",
+  "Cancel": "Cancel",
+  "Confirm": "Confirm",
+  "Running": "Running",
+  "Select value is empty": "Selected value is empty",
+  "UnKnow": "Unknown",
+  "Warning": "Warning",
   "app": {
-    "Advance App TestTip": "当前应用为高级编排模式\n如需切换为【简易模式】请点击左侧保存按键",
-    "App Detail": "应用详情",
-    "Chat Logs Tips": "日志会记录该应用的在线、分享和 API(需填写 chatId) 对话记录",
-    "Chat logs": "对话日志",
-    "Confirm Del App Tip": "确认删除该应用及其所有聊天记录？",
-    "Confirm Save App Tip": "该应用可能为高级编排模式，保存后将会覆盖高级编排配置，请确认！",
-    "Connection is invalid": "连接无效",
-    "Connection type is different": "连接的类型不一致",
-    "Copy Module Config": "复制配置",
-    "Export Config Successful": "已复制配置，请注意检查是否有重要数据",
-    "Export Configs": "导出配置",
-    "Feedback Count": "用户反馈",
-    "Import Config": "导入配置",
-    "Import Config Failed": "导入配置失败，请确保配置正常！",
-    "Import Configs": "导入配置",
-    "Input Field Settings": "输入字段编辑",
-    "Logs Empty": "还没有日志噢~",
-    "Logs Message Total": "消息总数",
-    "Logs Source": "来源",
-    "Logs Time": "时间",
-    "Logs Title": "标题",
-    "Mark Count": "标注答案数量",
-    "My Apps": "我的应用",
-    "Output Field Settings": "输出字段编辑",
-    "Paste Config": "粘贴配置",
-    "Variable Key Repeat Tip": "变量 key 重复"
+    "Advance App TestTip": "The current application is in advanced orchestration mode. To switch to the 'Simple Mode', please click the save button on the left.",
+    "App Detail": "App Details",
+    "Chat Logs Tips": "The log will record the online, shared, and API (chatId required) conversation records of this application.",
+    "Chat logs": "Chat Logs",
+    "Confirm Del App Tip": "Are you sure you want to delete this app and all its chat records?",
+    "Confirm Save App Tip": "This application may be in advanced orchestration mode. Saving will overwrite the advanced orchestration settings. Please confirm!",
+    "Connection is invalid": "Connection is invalid",
+    "Connection type is different": "Connection type is different",
+    "Copy Module Config": "Copy Configuration",
+    "Export Config Successful": "Configuration copied successfully. Please check for important data.",
+    "Export Configs": "Export Configurations",
+    "Feedback Count": "User Feedback",
+    "Import Config": "Import Configuration",
+    "Import Config Failed": "Failed to import configuration. Please ensure the configuration is correct!",
+    "Import Configs": "Import Configurations",
+    "Input Field Settings": "Input Field Editing",
+    "Logs Empty": "No logs yet~",
+    "Logs Message Total": "Total Messages",
+    "Logs Source": "Source",
+    "Logs Time": "Time",
+    "Logs Title": "Title",
+    "Mark Count": "Marked Answer Count",
+    "My Apps": "My Apps",
+    "Output Field Settings": "Output Field Editing",
+    "Paste Config": "Paste Configuration",
+    "Variable Key Repeat Tip": "Variable key is repeated"
   },
   "chat": {
-    "Admin Mark Content": "纠正后的回复",
-    "Complete Response": "完整响应",
-    "Confirm to clear history": "确认清空该应用的在线聊天记录？分享和 API 调用的记录不会被清空。",
-    "Exit Chat": "退出聊天",
-    "Feedback Close": "关闭反馈",
-    "Feedback Failed": "提交反馈异常",
-    "Feedback Mark": "标注",
-    "Feedback Modal": "结果反馈",
-    "Feedback Modal Tip": "输入你觉得回答不满意的地方",
-    "Feedback Submit": "提交反馈",
-    "Feedback Success": "反馈成功!",
-    "Feedback Update Failed": "更新反馈状态失败",
-    "History": "记录",
-    "Mark": "标注预期回答",
-    "Mark Description": "当前标注功能为测试版。\n\n点击添加标注后，需要选择一个知识库，以便存储标注数据。你可以通过该功能快速的标注问题和预期回答，以便引导模型下次的回答。\n\n目前，标注功能同知识库其他数据一样，受模型的影响，不代表标注后 100% 符合预期。\n\n标注数据仅单向与知识库同步，如果知识库修改了该标注数据，日志展示的标注数据无法同步",
-    "Mark Description Title": "标注功能介绍",
-    "New Chat": "新对话",
-    "Read Mark Description": "查看标注功能介绍",
-    "Read User Feedback": "查看用户反馈",
-    "Select Mark Kb": "选择知识库",
-    "Select Mark Kb Desc": "选择一个知识库存储预期答案",
-    "You need to a chat app": "你需要创建一个应用",
+    "Admin Mark Content": "Corrected Response",
+    "Complete Response": "Complete Response",
+    "Confirm to clear history": "Are you sure you want to clear the online chat records of this app? Records from sharing and API calls will not be cleared.",
+    "Exit Chat": "Exit Chat",
+    "Feedback Close": "Close Feedback",
+    "Feedback Failed": "Feedback Submission Failed",
+    "Feedback Mark": "Mark",
+    "Feedback Modal": "Feedback Result",
+    "Feedback Modal Tip": "Enter the parts of the answer you are not satisfied with",
+    "Feedback Submit": "Submit Feedback",
+    "Feedback Success": "Feedback Successfully Submitted!",
+    "Feedback Update Failed": "Failed to Update Feedback Status",
+    "History": "History",
+    "Mark": "Mark Expected Answer",
+    "Mark Description": "The current marking feature is in beta.\n\nAfter clicking to add a mark, you need to select a knowledge base to store the marked data. You can use this feature to quickly mark questions and expected answers to guide the model's response next time.\n\nCurrently, like other data in the knowledge base, the marking feature is influenced by the model and does not guarantee 100% accuracy after marking.\n\nMarked data only syncs one-way with the knowledge base. If the knowledge base modifies the marked data, the log display of marked data cannot be synchronized.",
+    "Mark Description Title": "Introduction to the Marking Feature",
+    "New Chat": "New Conversation",
+    "Read Mark Description": "View Introduction to the Marking Feature",
+    "Read User Feedback": "View User Feedback",
+    "Select Mark Kb": "Select Knowledge Base",
+    "Select Mark Kb Desc": "Choose a knowledge base to store the expected answer",
+    "You need to a chat app": "You need to create an app",
     "logs": {
-      "api": "API 调用",
-      "online": "在线使用",
-      "share": "外部链接调用",
-      "test": "测试"
+      "api": "API Call",
+      "online": "Online Use",
+      "share": "External Link Call",
+      "test": "Test"
     }
   },
   "commom": {
-    "Password inconsistency": "两次密码不一致"
+    "Password inconsistency": "Passwords do not match"
   },
   "common": {
-    "Add": "添加",
-    "Cancel": "取消",
-    "Collect": "收藏",
-    "Copy": "复制",
-    "Copy Successful": "复制成功",
-    "Course": "",
-    "Delete": "删除",
-    "Filed is repeat": "",
-    "Filed is repeated": "字段重复了",
-    "Input": "输入",
-    "Output": "输出",
-    "export": ""
+    "Add": "Add",
+    "Cancel": "Cancel",
+    "Collect": "Collect",
+    "Copy": "Copy",
+    "Copy Successful": "Copy Successful",
+    "Course": "Course",
+    "Delete": "Delete",
+    "Filed is repeat": "Field is repeated",
+    "Filed is repeated": "Field is repeated",
+    "Input": "Input",
+    "Output": "Output",
+    "export": "export"
   },
   "dataset": {
-    "Confirm to delete the data": "确认删除该数据？",
-    "Queue Desc": "该数据是指整个系统当前待训练的数量。{{title}} 采用排队训练的方式，如果待训练的数据过多，可能需要等待一段时间",
-    "System Data Queue": "排队长度"
+    "Confirm to delete the data": "Are you sure you want to delete this data?",
+    "Queue Desc": "This data refers to the current number of data waiting to be trained in the entire system. {{title}} uses a queue training method. If there is too much data waiting to be trained, you may need to wait for a while.",
+    "System Data Queue": "Queue Length"
   },
   "file": {
-    "Click to download CSV template": "点击下载 CSV 模板",
-    "Click to view file": "点击查看原始文件",
-    "Create File": "创建新文件",
-    "Create file": "创建文件",
-    "Drag and drop": "拖拽文件至此",
-    "Fetch Url": "链接读取",
-    "If the imported file is garbled, please convert CSV to UTF-8 encoding format": "如果导入文件乱码，请将 CSV 转成 UTF-8 编码格式",
-    "Parse": "{{name}} 解析中...",
-    "Release the mouse to upload the file": "松开鼠标上传文件",
-    "Select a maximum of 10 files": "最多选择10个文件",
-    "Uploading": "正在上传 {{name}}，进度: {{percent}}%",
-    "max 10": "最多选择 10 个文件",
-    "select a document": "选择文件",
-    "support": "支持 {{fileExtension}} 文件",
-    "upload error description": "单次只支持上传多个文件或者一个文件夹"
+    "Click to download CSV template": "Click to download CSV template",
+    "Click to view file": "Click to view original file",
+    "Create File": "Create New File",
+    "Create file": "Create file",
+    "Drag and drop": "Drag and drop files here",
+    "Fetch Url": "Fetch from URL",
+    "If the imported file is garbled, please convert CSV to UTF-8 encoding format": "If the imported file has garbled characters, please convert the CSV to UTF-8 encoding format",
+    "Parse": "Parsing {{name}}...",
+    "Release the mouse to upload the file": "Release the mouse to upload the file",
+    "Select a maximum of 10 files": "Select up to 10 files",
+    "Uploading": "Uploading {{name}}, progress: {{percent}}%",
+    "max 10": "Select up to 10 files",
+    "select a document": "Select a file",
+    "support": "Supports {{fileExtension}} files",
+    "upload error description": "Only supports uploading multiple files or one folder at a time"
   },
   "home": {
-    "AI Assistant": "AI 客服",
-    "AI Assistant Desc": "无论对内还是对外，AI 将 24 小时为您的用户提供服务",
-    "Advanced Settings": "高级编排",
-    "Advanced Settings Desc": "基于 Flow 的流程编排模式，让你的 AI 轻松实现数据库查询、IO 操作、联网通信等扩展能力",
-    "Choice Debug": "调试便捷",
-    "Choice Debug Desc": "拥有搜索测试、引用修改、完整对话预览等多种调试途径",
+    "AI Assistant": "AI Assistant",
+    "AI Assistant Desc": "Whether internally or externally, AI will provide 24-hour service to your users",
+    "Advanced Settings": "Advanced Settings",
+    "Advanced Settings Desc": "Based on the Flow orchestration mode, your AI can easily achieve database queries, IO operations, online communication, and other extended capabilities",
+    "Choice Debug": "Convenient Debugging",
+    "Choice Debug Desc": "Offers multiple debugging methods such as search testing, reference modification, and full conversation preview",
     "Choice Desc": "",
-    "Choice Extension": "无限扩展",
-    "Choice Extension Desc": "基于 HTTP 实现扩展，轻松实现定制功能",
-    "Choice Fast": "开箱即用",
-    "Choice Fast Desc": "{{title}} 提供开箱即用的可视化操作，点点点即可构建 AI 应用",
-    "Choice Models": "支持多种模型",
-    "Choice Models Desc": "支持 GPT、Claude、Spark、ChatGLM等多模型",
-    "Choice Open": "更开放",
-    "Choice Open Desc": "{{title}} 遵循 Apache License 2.0 开源协议",
-    "Choice QA": "独特的 QA 结构",
-    "Choice QA Desc": "采用 QA 对的结构构建索引，适应问答、阅读等多种场景",
-    "Choice Visual": "可视化工作流",
-    "Choice Visual Desc": "可视化模块操作，轻松实现复杂工作流，让你的 AI 不再单一",
-    "Community": "社区",
-    "Dateset": "自动数据预处理",
-    "Dateset Desc": "提供手动输入、直接分段、LLM 自动处理和 CSV 等多种数据导入途径",
-    "Docs": "文档",
-    "FastGPT Ability": "{{title}} 能力",
-    "FastGPT Desc": "{{title}} 是一个基于 LLM 大语言模型的知识库问答系统，提供开箱即用的数据处理、模型调用等能力。同时可以通过 Flow 可视化进行工作流编排，从而实现复杂的问答场景！",
-    "Features": "特点",
-    "Footer Developer": "开发者",
-    "Footer Docs": "文档",
-    "Footer FastGPT Cloud": "{{title}} 线上服务",
-    "Footer Feedback": "反馈",
-    "Footer Git": "源码",
-    "Footer Product": "产品",
-    "Footer Support": "支持",
-    "Login": "登录",
+    "Choice Extension": "Infinite Extension",
+    "Choice Extension Desc": "Extensions based on HTTP, easily implement custom functions",
+    "Choice Fast": "Ready to Use",
+    "Choice Fast Desc": "{{title}} offers a ready-to-use visual operation, just a few clicks to build an AI application",
+    "Choice Models": "Supports Multiple Models",
+    "Choice Models Desc": "Supports multiple models like GPT, Claude, Spark, ChatGLM, etc.",
+    "Choice Open": "More Open",
+    "Choice Open Desc": "{{title}} follows the Apache License 2.0 open-source agreement",
+    "Choice QA": "Unique QA Structure",
+    "Choice QA Desc": "Uses a QA pair structure to build indexes, suitable for Q&A, reading, and other scenarios",
+    "Choice Visual": "Visual Workflow",
+    "Choice Visual Desc": "Visual module operation, easily implement complex workflows, making your AI more versatile",
+    "Community": "Community",
+    "Dateset": "Automatic Data Preprocessing",
+    "Dateset Desc": "Offers various data import methods like manual input, direct segmentation, LLM automatic processing, and CSV",
+    "Docs": "Documentation",
+    "FastGPT Ability": "{{title}} Capability",
+    "FastGPT Desc": "{{title}} is a knowledge base Q&A system based on the LLM large language model, offering ready-to-use data processing, model invocation, etc. It also allows workflow orchestration through Flow visualization, achieving complex Q&A scenarios!",
+    "Features": "Features",
+    "Footer Developer": "Developer",
+    "Footer Docs": "Documentation",
+    "Footer FastGPT Cloud": "{{title}} Online Service",
+    "Footer Feedback": "Feedback",
+    "Footer Git": "Source Code",
+    "Footer Product": "Product",
+    "Footer Support": "Support",
+    "Login": "Login",
     "Open": "",
     "OpenAPI": "OpenAPI",
-    "OpenAPI Desc": "与 GPT API 一致的对外接口，助你轻松接入已有应用",
-    "Quickly build AI question and answer library": "快速搭建 AI 问答系统",
-    "Start Now": "立即开始",
-    "Visual AI orchestration": "可视化 AI 编排",
-    "Why FastGPT": "为什么选择 {{title}}",
-    "desc": "基于 LLM 大模型的 AI 知识库问答平台",
-    "slogan": "让 AI 更懂你的知识"
+    "OpenAPI Desc": "An external interface consistent with the GPT API, helping you easily integrate with existing applications",
+    "Quickly build AI question and answer library": "Quickly Build an AI Q&A System",
+    "Start Now": "Start Now",
+    "Visual AI orchestration": "Visual AI Orchestration",
+    "Why FastGPT": "Why Choose {{title}}",
+    "desc": "AI Q&A platform based on the LLM large model",
+    "slogan": "Making AI understand your knowledge better"
   },
   "navbar": {
-    "Account": "账号",
-    "Apps": "应用",
-    "Chat": "聊天",
-    "Datasets": "知识库",
-    "Store": "应用市场",
-    "Tools": "工具"
+    "Account": "Account",
+    "Apps": "Apps",
+    "Chat": "Chat",
+    "Datasets": "Knowledge Base",
+    "Store": "App Store",
+    "Tools": "Tools"
   },
   "user": {
-    "Account": "账号",
-    "Amount of earnings": "收益（￥）",
-    "Amount of inviter": "累计邀请人数",
-    "Application Name": "应用名",
-    "Avatar": "头像",
-    "Balance": "余额",
-    "Bill Detail": "账单详情",
-    "Change": "变更",
-    "Copy invite url": "复制邀请链接",
-    "Invite Url": "邀请链接",
-    "Invite url tip": "通过该链接注册的好友将永久与你绑定，其充值时你会获得一定余额奖励。\n此外，好友使用手机号注册时，你将立即获得 5 元奖励。",
-    "Notice": "通知",
-    "Old password is error": "旧密码错误",
-    "OpenAI Account Setting": "OpenAI 账号配置",
-    "Password": "密码",
-    "Pay": "充值",
-    "Personal Information": "个人信息",
+    "Account": "Account",
+    "Amount of earnings": "Earnings (¥)",
+    "Amount of inviter": "Total Invited People",
+    "Application Name": "App Name",
+    "Avatar": "Avatar",
+    "Balance": "Balance",
+    "Bill Detail": "Bill Details",
+    "Change": "Change",
+    "Copy invite url": "Copy Invite Link",
+    "Invite Url": "Invite Link",
+    "Invite url tip": "Friends who register through this link will be permanently linked to you. When they recharge, you will receive a certain balance reward. In addition, when friends register with a phone number, you will immediately receive a 5 yuan reward.",
+    "Notice": "Notification",
+    "Old password is error": "Old Password is Incorrect",
+    "OpenAI Account Setting": "OpenAI Account Configuration",
+    "Password": "Password",
+    "Pay": "Recharge",
+    "Personal Information": "Personal Information",
     "Promotion": "",
-    "Promotion Rate": "返现比例",
-    "Promotion Record": "推广记录",
-    "Promotion rate tip": "好友充值时你将获得一定比例的余额奖励",
-    "Recharge Record": "充值记录",
-    "Replace": "更换",
-    "Set OpenAI Account Failed": "设置 OpenAI 账号异常",
-    "Sign Out": "登出",
-    "Source": "来源",
-    "Time": "时间",
-    "Total Amount": "总金额",
-    "Update Password": "修改密码",
-    "Update password failed": "修改密码异常",
-    "Update password succseful": "修改密码成功",
-    "Usage Record": "使用记录",
+    "Promotion Rate": "Cashback Rate",
+    "Promotion Record": "Promotion Record",
+    "Promotion rate tip": "You will receive a certain percentage of balance reward when your friend recharges",
+    "Recharge Record": "Recharge Record",
+    "Replace": "Replace",
+    "Set OpenAI Account Failed": "Setting OpenAI Account Failed",
+    "Sign Out": "Log Out",
+    "Source": "Source",
+    "Time": "Time",
+    "Total Amount": "Total Amount",
+    "Update Password": "Update Password",
+    "Update password failed": "Password Update Failed",
+    "Update password succseful": "Password Update Successful",
+    "Usage Record": "Usage Record",
     "promotion": {
-      "pay": "好友充值",
-      "register": "好友注册"
+      "pay": "Friend's Recharge",
+      "register": "Friend's Registration"
     }
   }
 }
